--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@types/react": "^18.0.21",
         "@types/react-dom": "^18.0.6",
         "@types/react-image-gallery": "^1.2.0",
+        "mui-chips-input": "^1.3.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-image-gallery": "^1.2.11",
