--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
         "@fontsource/roboto": "^4.5.8",
+        "@mui/icons-material": "^5.11.0",
         "@mui/material": "^5.10.17",
         "@mui/x-date-pickers": "^5.0.16",
         "@testing-library/jest-dom": "^5.16.5",
@@ -37,6 +38,9 @@
         "typescript": "^4.8.4",
         "web-vitals": "^2.1.4"
     },
+    "devDependencies": {
+        "@types/luxon": "^3.2.0"
+    }
     "eslintConfig": {
         "extends": [
             "react-app",
