Styles fixes, env variable updates

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_API_URL=https://diht-api.cmtybur.com
-REACT_APP_USER_AGENT=
+REACT_APP_USER_AGENT=Did-I-Hike-That-cfd3d2a8-6ae7-4208-81ec-c520b5bb2e58
