--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "build": "react-scripts build",
         "eject": "react-scripts eject",
         "start": "react-scripts start",
-        "test": "react-scripts test --watchAll=false"
+        "test": "react-scripts test --watchAll=false --passWithNoTests"
     },
     "dependencies": {
         "@emotion/react": "^11.10.5",
@@ -22,6 +22,7 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.5.2",
+        "@types/luxon": "^3.2.0",
         "@types/node": "^16.11.65",
         "@types/react": "^18.0.21",
         "@types/react-dom": "^18.0.6",
@@ -37,9 +38,6 @@
         "tss-react": "^4.4.5",
         "typescript": "^4.8.4",
         "web-vitals": "^2.1.4"
-    },
-    "devDependencies": {
-        "@types/luxon": "^3.2.0"
     },
     "eslintConfig": {
         "extends": [
