--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "build": "react-scripts build",
         "eject": "react-scripts eject",
         "start": "react-scripts start",
+        "start-build": "npm run build && serve build -p 3050 -s",
         "test": "react-scripts test --watchAll=false --passWithNoTests"
     },
     "dependencies": {
