Added ordering of photos

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-image-file-resizer": "^0.4.8",
+        "react-movable": "^3.0.4",
         "react-router-dom": "^6.4.5",
         "react-scripts": "5.0.1",
         "sass": "^1.56.1",
