Switched to a different drag and drop library

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
         "@fontsource/roboto": "^4.5.8",
+        "@hello-pangea/dnd": "^16.3.0",
         "@mui/icons-material": "^5.11.0",
         "@mui/material": "^5.10.17",
         "@mui/x-date-pickers": "^5.0.16",
@@ -26,12 +27,12 @@
         "@types/node": "^16.11.65",
         "@types/react": "^18.0.21",
         "@types/react-dom": "^18.0.6",
+        "array-move": "^4.0.0",
         "axios": "^1.2.1",
         "luxon": "^3.2.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-image-file-resizer": "^0.4.8",
-        "react-movable": "^3.0.4",
         "react-router-dom": "^6.4.5",
         "react-scripts": "5.0.1",
         "sass": "^1.56.1",
@@ -56,5 +57,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
     }
 }
