--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "axios": "^1.7.5",
         "luxon": "^3.2.1",
         "react": "^18.2.0",
+        "react-cookie": "^7.2.2",
         "react-dom": "^18.2.0",
         "react-image-file-resizer": "^0.4.8",
         "react-router-dom": "^6.4.5",
