--- a/package.json
+++ b/package.json
@@ -1,65 +1,53 @@
 {
     "name": "did-i-hike-that",
-    "version": "1.2.5",
+    "private": true,
+    "version": "1.3.0",
     "description": "Did I Hike That?",
     "author": "Chris Tybur",
-    "private": true,
     "license": "MIT",
+    "type": "module",
     "scripts": {
-        "build": "react-scripts build",
-        "eject": "react-scripts eject",
-        "start": "react-scripts start",
-        "test": "react-scripts test --watchAll=false --passWithNoTests"
+        "build": "tsc -b && vite build",
+        "dev": "vite --port 3050",
+        "lint": "eslint ./src",
+        "preview": "vite preview"
     },
     "dependencies": {
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
-        "@fontsource/roboto": "^4.5.8",
-        "@hello-pangea/dnd": "^16.3.0",
+        "@fontsource/roboto": "^5.2.6",
+        "@hello-pangea/dnd": "^18.0.1",
         "@mui/icons-material": "^5.11.0",
         "@mui/material": "^5.10.17",
-        "@mui/x-date-pickers": "^5.0.16",
+        "@mui/x-date-pickers": "^6.20.2",
+        "array-move": "^4.0.0",
+        "axios": "^1.8.3",
+        "luxon": "^3.5.0",
+        "react": "^18.3.1",
+        "react-cookie": "^7.2.2",
+        "react-dom": "^18.3.1",
+        "react-image-file-resizer": "^0.4.8",
+        "react-router-dom": "^6.4.5",
+        "sass": "^1.56.1",
+        "tss-react": "^4.9.12"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.33.0",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.5.2",
         "@types/luxon": "^3.2.0",
-        "@types/node": "^20.9.2",
-        "@types/react": "^18.0.21",
-        "@types/react-dom": "^18.0.6",
-        "array-move": "^4.0.0",
-        "axios": "^1.8.3",
-        "luxon": "^3.5.0",
-        "react": "^18.2.0",
-        "react-cookie": "^7.2.2",
-        "react-dom": "^18.2.0",
-        "react-image-file-resizer": "^0.4.8",
-        "react-router-dom": "^6.4.5",
-        "react-scripts": "5.0.1",
-        "sass": "^1.56.1",
-        "tss-react": "^4.9.12",
-        "typescript": "^4.8.4",
-        "web-vitals": "^2.1.4"
-    },
-    "devDependencies": {
-        "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
+        "@types/node": "^22.18.1",
+        "@types/react": "^18.3.23",
+        "@types/react-dom": "^18.3.7",
+        "@vitejs/plugin-react": "^5.0.2",
+        "eslint": "^9.35.0",
+        "eslint-plugin-react-hooks": "^5.2.0",
+        "eslint-plugin-react-refresh": "^0.4.20",
+        "globals": "^16.3.0",
+        "typescript": "^5.9.2",
+        "typescript-eslint": "^8.42.0",
+        "vite": "^7.1.2"
     }
 }
