--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ jobs:
         displayName: 'Build the project'
       - task: ArchiveFiles@2
         inputs:
-          rootFolderOrFile: build
+          rootFolderOrFile: dist
           includeRootFolder: false
           archiveType: zip
           archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.Repository.Name)-$(Build.BuildId).zip'
